--- a/style-grid.css
+++ b/style-grid.css
@@ -1,3 +1,7 @@
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */
+input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
+/* copied from wes bos */
+
 :root{
     --yellow: #ffc600;
     --black: #272727;
@@ -43,12 +47,13 @@ img{
     grid-gap: 20px;
     position: fixed;
     list-style: none;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-areas: 1fr;
     justify-content: center;
      }
 
-/* ADD @MEDIA */
+
+
 .menu ul :hover{
     background: rgb(240, 145, 144);
 }
@@ -68,11 +73,6 @@ img{
 
 
 .wrapper{
-margin-left: -10px;
-margin-right: -10px;
-width: 100%;
-/* right:-5px;
-left:-10px; */
 border: 0;
 padding: 0;
 }
@@ -86,7 +86,7 @@ padding: 0;
     "main-title";
     width: 1fr;
     margin-top: 77px;
-    margin-right: -20px;
+    /* margin-right: -20px; */
     background: whitesmoke;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
@@ -148,7 +148,6 @@ padding: 0;
     background-color: whitesmoke;
     margin:0;
     top:100px;
-    margin-right: -20px;
 }
 #salon{
     display: grid;
@@ -168,7 +167,7 @@ padding: 0;
     margin:0 20px 0 0;
     align-content:center;  
 }
-#salon h3{
+#h3-nuestro-salon{
     text-align: center;
     align-self: end;
     font-size: 60px;
@@ -191,7 +190,6 @@ padding: 0;
     background-color: rgb(253, 253, 253);
     margin:0;
     top:100px;
-    margin-right: -20px;
 }    
 
 #servicios{
@@ -200,7 +198,7 @@ padding: 0;
     grid-template-rows: 1fr 1fr;
     }
 .servicios-box{
-    margin: 50px 20px 0 20px;
+    margin: 50px 0px 0 0px;
     text-align: center;
     }
 
@@ -248,8 +246,25 @@ align-items: center;
 .img-servicios{
     border-radius: 50%;
 }
+
+@media (max-width:600px){
+    #servicios{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(auto, 1fr);
+    }
+    #servicios-title{
+        grid-column: span 2;
+        padding:0;
+        margin: 0;
+    }
+    #servicios-title h2{
+        margin:25px 0 15px 0;
+        font-size: 60px;
+    }
+}
 /* Lista precios */
-#container-precios{
+/* #container-precios{
     background: rgb(250, 223, 220);
     margin-top: -100px;
     margin-right: -20px;
@@ -287,7 +302,7 @@ align-items: center;
     padding: 50px;
     margin: 0;
     color: #414141;
-}
+} */
 
 .title-mujer{
     grid-column: span 2;
@@ -306,7 +321,6 @@ align-items: center;
 
 /* Galeria */
 #container-galery{
-    margin:-100px 0 0 0;
     padding: 0;
     width: 1fr;
 
@@ -328,7 +342,7 @@ align-items: center;
 /* Contacto */
 #container-contacto{
    background: whitesmoke;
-    margin-top: -100px;
+    margin: -100px 0 60px 0;
     height: 350px;
 }
 #container-contacto h2{
@@ -361,4 +375,26 @@ align-items: center;
     font-size: 20px;
     justify-self: center;
     
+}
+
+/* MEDIA QUERY */
+@media (max-width:600px){
+    .menu ul {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 5px;
+        position: relative;
+        
+    }
+    .menu a {
+        background: rgba(231, 117, 113, 0.788);
+        font-size: 15px;
+    }
+    .big-banner{
+        margin-top: 10px;
+    }
+    #optional{
+        display: none;
+    }
+
 }
