--- a/style-grid.css
+++ b/style-grid.css
@@ -190,6 +190,7 @@ padding: 0;
     background-color: rgb(253, 253, 253);
     margin:0;
     top:100px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }    
 
 #servicios{
@@ -247,22 +248,6 @@ align-items: center;
     border-radius: 50%;
 }
 
-@media (max-width:600px){
-    #servicios{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(auto, 1fr);
-    }
-    #servicios-title{
-        grid-column: span 2;
-        padding:0;
-        margin: 0;
-    }
-    #servicios-title h2{
-        margin:25px 0 15px 0;
-        font-size: 60px;
-    }
-}
 /* Lista precios */
 /* #container-precios{
     background: rgb(250, 223, 220);
@@ -323,6 +308,8 @@ align-items: center;
 #container-galery{
     padding: 0;
     width: 1fr;
+    align-content: center;
+   
 
 }
 .galery{
@@ -396,5 +383,41 @@ align-items: center;
     #optional{
         display: none;
     }
+    #salon3{
+        display: none;
+    }
+    #servicios{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(auto, 1fr);
+    }
+    #servicios-title{
+        grid-column: span 2;
+        padding:0;
+        margin: 0;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    }
+    #servicios-title h2{
+        margin:25px 0 15px 0;
+        font-size: 60px;
+    }
 
+    .galery{
+        padding: 20px;
+
+       }
+}
+
+@media (max-width:1200px){
+    #img-nuestro-salon{
+        display: none;
+    }
+    #salon{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-rows: repeat(auto, 1fr)
+    }
+    #salon3{
+        display:none;
+    }
 }
