--- a/style-grid.css
+++ b/style-grid.css
@@ -86,9 +86,8 @@ padding: 0;
     "main-title";
     width: 1fr;
     margin-top: 77px;
-    /* margin-right: -20px; */
     background: whitesmoke;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 8px 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .big-banner-title h1{
@@ -96,6 +95,7 @@ padding: 0;
    justify-items: center;
     font-family: 'Parisienne', cursive;
     font-size: 80px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 
 }
 .big-banner-title p{
